// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render all service questions correctly 1`] = `
<div>
  <div>
    <form
      className="form"
    >
      <div
        className="input-group mb-3"
      >
        <input
          className="input username"
          name="username"
          onChange={[Function]}
          placeholder="Search for providers..."
          type="text"
        />
        <input
          className="input zipcode"
          name="username"
          onChange={[Function]}
          placeholder="Zipcode"
          type="text"
        />
        <div
          className="input-group-append"
        >
          <button
            className="search-button btn btn-success"
            style={
              Object {
                "margin": "2px",
              }
            }
            type="button"
          >
            Search
          </button>
        </div>
      </div>
    </form>
  </div>
  <div>
    <h3>
      Service Questions
    </h3>
    <table
      className="table"
    >
      <tbody>
        <tr>
          <td>
            <select
              onChange={[Function]}
              value={0}
            />
            
            
            <button
              className="btn btn-primary"
              disabled={true}
              style={
                Object {
                  "margin": "2px",
                }
              }
              type="button"
            >
              1
            </button>
            <button
              className="btn btn-primary next-page-btn"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                }
              }
              type="button"
            >
              2
            </button>
            <button
              className="btn btn-secondary next-btn"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                }
              }
              type="button"
            >
              &gt;
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render all service questions correctly 2`] = `
<div>
  <div>
    <form
      className="form"
    >
      <div
        className="input-group mb-3"
      >
        <input
          className="input username"
          name="username"
          onChange={[Function]}
          placeholder="Search for providers..."
          type="text"
        />
        <input
          className="input zipcode"
          name="username"
          onChange={[Function]}
          placeholder="Zipcode"
          type="text"
        />
        <div
          className="input-group-append"
        >
          <button
            className="search-button btn btn-success"
            style={
              Object {
                "margin": "2px",
              }
            }
            type="button"
          >
            Search
          </button>
        </div>
      </div>
    </form>
  </div>
  <div>
    <h3>
      Service Questions
    </h3>
    <table
      className="table"
    >
      <tbody>
        <tr>
          <td>
            <a
              href="/admin/questions/11"
              onClick={[Function]}
            >
              Question11
            </a>
          </td>
        </tr>
        <tr>
          <td>
            <select
              onChange={[Function]}
              value={10}
            >
              <option
                value={1}
              >
                1
              </option>
              <option
                value={2}
              >
                2
              </option>
              <option
                value={5}
              >
                5
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={25}
              >
                25
              </option>
              <option
                value={50}
              >
                50
              </option>
            </select>
            <button
              className="btn btn-secondary previous-btn"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                }
              }
              type="button"
            >
              &lt;
            </button>
            <button
              className="btn btn-primary previous-page-btn"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                }
              }
              type="button"
            >
              1
            </button>
            <button
              className="btn btn-primary"
              disabled={true}
              style={
                Object {
                  "margin": "2px",
                }
              }
              type="button"
            >
              2
            </button>
            
            
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
